fixed portfolio height on mobile

--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ main {
 .portfolio-carousel {
   position: relative;
   height: 1050px;
+  max-height: 100vh;
   margin: 0 auto;
 }
 
